--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,3 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+h2 {
+  background: linear-gradient(transparent 70%, #a7d6ff 80%);
+}
+
+
