--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -35,7 +35,7 @@
 
                     <div class="field">
                       <%= f.label :place, "所在地", style: "width: 15%;", class: "label" %>
-                      <%= f.text_field :place, style: "width: 60%; height: 30px;", class: "textfield", placeholder: "東京駅構内など" %>
+                      <%= f.text_field :place, style: "width: 60%; height: 30px;", class: "textfield", placeholder: "東京駅徒歩○○分など" %>
                     </div>
 
                     <%= f.submit '投稿', class: "button is-success" %>
