add logout function

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,6 +95,8 @@
 
   </body>
 
+  <%= render 'posts/headline' %>
+
   <!-- Custom styles for this template -->
   <footer class="footer", style="background-color: #F5F5F5;">
     <div class="container">
