--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,8 +22,8 @@
 
 .main-image {
   height: 940px;
-  background-image: url(koen.jpg);
-  background-repeat: no-repeat; 
+  background-image: url;
+  background-repeat: no-repeat;
   /*サイズが余ったら繰り返すのを防ぐ-- */
   background-size: contain;
 }
@@ -90,7 +90,7 @@ body {
 
 .postimage{
   height: auto;
-  max-width: 650px;
+  max-width: 100%;
 
 }
 
@@ -110,7 +110,7 @@ body {
 /* ---------------------------- */
 /* --- ハンバーガーアイコン --- */
 /* ---------------------------- */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1000px) {
 #hm-icon{
   position: fixed;
   right: 20px;
@@ -133,7 +133,7 @@ body {
   left: 0;
   width: 100%;
   height: 4px;
-  background-color: #000;
+  background-color: #47669a;
   border-radius: 4px;
 }
 .menu-trigger span:nth-of-type(1) {
@@ -166,7 +166,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background: #000;
+  background: #47669a;
   color: #fff;
   width: 100%;
   min-height: 100%;
