--- a/app/views/posts/_sidebar.html.erb
+++ b/app/views/posts/_sidebar.html.erb
@@ -1,69 +1,68 @@
 
-<div class="col-md-2">
-    <h3>User info</h3>
-    
+<div class="row">
+  <div class="col-md-12">
 
+    <div class="profile-container">
+     <table class="table is-fullwidth">
+        <tbody>
 
-  <div class="profile-container">
-   <table class="table">
-      <tbody>
+          <tr>
+            <th>---検索---</th>
+            <th class="profile-name"></th>
+            <th><%=  %></th>
+            <th colspan="3"></th>
+          </tr>
 
-        <tr>
-          <th>name</th>
-          <th class="profile-name"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
+          <tr>
+            <th><%= link_to "ALL USERS", users_path %></th>
+            <th class="introduction"></th>
+            <th></th>
+            <th colspan="3"></th>
+          </tr>
 
-        <tr>
-          <th>introduction</th>
-          <th class="introduction"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
+          <tr>
+            <th></th>
+            <th class="profile-name"></th>
+            <th><%=  %></th>
+            <th colspan="3"></th>
+          </tr>
 
-        <tr>
-          <th>name</th>
-          <th class="profile-name"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
+          <tr>
+            <th>FAVO</th>
+            <th class="introduction"></th>
+            <th><%=  %></th>
+            <th colspan="3"></th>
+          </tr>
 
-        <tr>
-          <th>introduction</th>
-          <th class="introduction"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
+          <tr>
+            <th></th>
+            <th class="profile-name"></th>
+            <th><%=  %></th>
+            <th colspan="3"></th>
+          </tr>
 
-        <tr>
-          <th>name</th>
-          <th class="profile-name"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
+          <tr>
+            <th>SPOT</th>
+            <th class="introduction"></th>
+            <th><%=  %></th>
+            <th colspan="3"></th>
+          </tr>
 
-        <tr>
-          <th>introduction</th>
-          <th class="introduction"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
+          <tr>
+            <th></th>
+            <th class="profile-name"></th>
+            <th><%=  %></th>
+            <th colspan="3"></th>
+          </tr>
 
-        <tr>
-          <th>name</th>
-          <th class="profile-name"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
-
-        <tr>
-          <th>introduction</th>
-          <th class="introduction"></th>
-          <th><%=  %></th>
-          <th colspan="3"></th>
-        </tr>
-      </tbody>
-   </table>
+          <tr>
+            <th>TAG</th>
+            <th class="introduction"></th>
+            <th><%=  %></th>
+            <th colspan="3"></th>
+          </tr>
+        </tbody>
+     </table>
+    </div>
   </div>
 </div>
