--- a/app/views/top/infomation.html.erb
+++ b/app/views/top/infomation.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-10">
     
-    <br></br>
+    <br><br>
     <div class="col-2 offset-5 table-active h4 text-center">Information</div>
       <p></p>
     <h5 class="text-center">Favospotに関する情報です。</h5>
     <h5 class="text-center">「当サイトについて」と「お気に入りの場所について」のご説明致します。</h5>
-    <h6 class="text-center">Molique</h6>
-    <br></br>
+    <h6 class="text-center">Produced by Molique.</h6>
+    <br>
 
     <p></p>
       <table class="table table-borderless">
