--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,12 @@
 
 <div class="row">
   <div class="col-md-10">
+
     <section class="hero is-success">
       <div class="hero-body">
         <div class="container">
           <div class="row">
-            <div class="col-3 offset-0 table-active h4 text-center">USERS</div>
+            <div class="col-5 offset-5 table-active h4 text-center">ALL USERS</div>
           </div>
         </div>
       </div>
@@ -15,32 +16,35 @@
 
     <section class="section">
       <div class="container">
-        <div class="columns is-multiline">
-    	     <% @users.each do |user| %>
-    		    <div class="column is-3">
-              <div class="card">
-                <div class="card-content">
-                  <div class="card-image">
-                    <figure class="image">
-                      <%= link_to user_path(user) do %>
-    					         <%= attachment_image_tag user, :profile_image, fallback: "noimage.png" %>
-    		              <% end %>
-    				        </figure>
-                  </div>
-                </div>
-                <div class="card-content">
-                  <div class="media">
-                    <div class="media-content">
-                      <div class="title"><%=link_to user.user_name, user_path(user) %></div>
+        <div class="col-12">
+          <div class="col">
+            <div class="row">
+        	     <% @users.each do |user| %>
+        		    <div class="card">
+                  <div class="card-imag">
+                    <div class="float-center" , style="padding: 1px;">
+
+                      <figure class="image">
+                        <%= link_to user_path(user) do %>
+                          <div class="float-left" , style="padding: 10px;">
+        					         <%= attachment_image_tag user, :profile_image, class: " pull-left profile-img", fallback: "noimage.png" , size:"100x100"%>
+                          </div>
+      		              <% end %>
+      				        </figure>
                     </div>
                   </div>
-                  	<div class="content">
-                    	投稿数：<%= user.posts.count %>
-                  	</div>
                 </div>
-              </div>
+                  <div class="card-content">
+                    <div class="media">
+                      <div class="media-content">
+                        
+                      </div>
+                    </div>
+                  </div>
+                  
+              <% end %>
             </div>
-          <% end %>
+          </div>
         </div>
       </div>
     </section>
@@ -54,4 +58,5 @@
     </td>
   </tr>
 </table>
+
 
