--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,4 +7,10 @@ h2 {
   background: linear-gradient(transparent 70%, #a7d6ff 80%);
 }
 
+.comment {
+    font-size: 12px;
+}
 
+.comment-text {
+	width: 90px;
+}
