--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,6 @@
                     </div>
                   <% end %>
                 </figure>
-
               </div>
                 <tr>
                   <td>
@@ -74,59 +73,74 @@
             <div class="column is-4">
               <div class="card">
                 <div class="card-image">
-                  <figure class="image is-4by3">
+
                     <%= link_to post_path(post) do %>
                       <% post.post_images.each do |img| %>
 
                         <%= attachment_image_tag img, :post_image, fallback: "noimage.png", class: "postimage" %>
                       <% end %>
                     <% end %>
-                  </figure>
-                </div>
 
-                <td> <!-- いいね機能 -->
-                  <% if current_user.already_favorited?(post) %>
-                    <%= link_to post_favorites_path(post), method: :delete do %>
-                      <i class="fas fa-heart"></i>
-                    <% end %>
-                    <%= post.favorites.count %>
-                  <% else %>
-                    <%= link_to post_favorites_path(post), method: :post do %>
-                      <i class="far fa-heart"></i>
-                    <% end %>
-                    <%= post.favorites.count %>
-                  <% end %>
-                </td>
+
+                    <div class="media">
+                        <div class="media-content">
+
+
+                          <td> <!-- いいね機能 -->
+                            <% if current_user.already_favorited?(post) %>
+                              <%= link_to post_favorites_path(post), method: :delete do %>
+                                <i class="fas fa-heart" style="color: red;"></i>
+                              <% end %>
+                              <%= post.favorites.count %>
+
+                            <% else %>
+                              <%= link_to post_favorites_path(post), method: :post do %>
+                                <i class="far fa-heart" style="color: red;"></i>
+
+                              <% end %>
+                              <%= post.favorites.count %>
+                            <% end %>
+
+                            <i class="fa fa-comment"  style="color: gray;"></i>
+                    <a class="comments"><%= post.comments.count %></a>
+                          </td>
+
+
+
+                          </div>
+                    </div>
+
+                        
+                        <div class="media-content">
+                          
+
+                            <% if @user.id == current_user.id %>
+                              <%= link_to edit_post_path(post), class: "panel-block" do %>
+                                <span class="panel-icon">
+                                  <i class="fas fa-pencil-alt" style="color: gray;">編集する</i>
+                                </span>
+
+                              <% end %>
+                              <%= link_to post_path(post), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
+                                <span class="panel-icon">
+                                  <i class="fas fa-trash" style="color: gray;">削除する</i>
+                                </span>
+                              <% end %>
+                            <% end %>
+                        </div>
+
+
+
+
+
 
                 <div class="card-content">
-                  <div class="media">
-                    <div class="media-content">
-                      <%= link_to post_path(post), class: "panel-block" do %>
-                        <span class="panel-icon">
-                          <i class="fas fa-book" aria-hidden="true"></i>
-                        </span>
-                        この投稿を見る
-                      <% end %>
-                      <% if @user.id == current_user.id %>
-                        <%= link_to edit_post_path(post), class: "panel-block" do %>
-                          <span class="panel-icon">
-                            <i class="fas fa-edit"></i>
-                          </span>
-                          この投稿を編集する
-                        <% end %>
-                        <%= link_to post_path(post), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
-                          <span class="panel-icon">
-                            <i class="fas fa-trash"></i>
-                          </span>
-                          この投稿を削除する
-                        <% end %>
-                      <% end %>
-                    </div>
-                  </div>
+                  
                   <div class="content">
                     <time><%= post.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
                   </div>
                 </div>
+
               </div>
             </div>
           <% end %>
