--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -58,19 +58,19 @@
             <% if user_signed_in? %>
               <h5>
                 <br>
-                Favospotはあなたの ”お気に入りの場所” を紹介するサイトです。<br>
-                何気ない景色や公園、道端の花壇など<br>あなたの ”お気に入りの場所” はきっと誰かも好きな場所です。<br>
+                Favospotはあなたの”お気に入りの場所 ”を紹介するサイトです。<br>
+                何気ない景色や公園、お店や道端の花壇など<br>あなたの”お気に入りの場所 ”はきっと誰かも好きな場所です。<br>
               </h5>
               <p>ヘッダーの New spot から<br>あなたのお気に入りの場所を教えてください。
               </p>
             <% else %>
               <h5>
                 <br>
-                Favospotはあなたの ”お気に入りの場所” を紹介するサイトです。<br>
-                何気ない景色や公園、道端の花壇など<br>あなたの ”お気に入りの場所” はきっと誰かも好きな場所です。<br>
+                Favospotはあなたの”お気に入りの場所 ”を紹介するサイトです。<br>
+                何気ない景色や公園、道端の花壇など<br>あなたの”お気に入りの場所 ”はきっと誰かも好きな場所です。<br>
               </h5>
-              <p>投稿、コメントにつきましては<br>
-                 新規登録より会員登録をお願いいたします。
+              <p>投稿、コメントをするには<br>
+                 Signupより会員登録をお願いいたします。
               </p>
             <% end %>
           </span>
