--- a/app/views/top/infomation.html.erb
+++ b/app/views/top/infomation.html.erb
@@ -4,7 +4,7 @@
     <div class="col-2 offset-5 table-active h4 text-center">Information</div>
       <p></p>
     <h5 class="text-center">Favospotに関する情報です。</h5>
-    <h5 class="text-center">「当サイトについて」と「お気に入りの場所について」のご説明致します。</h5>
+    <h5 class="text-center">「当サイトについて」と「お気に入りの場所について」</h5>
     <h6 class="text-center">Produced by Molique.</h6>
     <br>
     <p></p>
@@ -27,7 +27,7 @@
           <th>【3】このサイトの楽しみ方</th>
         </tr>
         <tr>
-          <td>　ユーザー登録後まずは色々なFavospotを見て下さい。なぜこの人はここが好きなのか少し立ち止まって考えてみると楽しいかもしれません。いいねやコメントもしてみて下さい。また、あなたのFavospotも教えて下さい。あなたのお気に入りの場所はきっと誰かのお気に入りの場所になるはずです。こんな場所があるんだと思ったら現地に赴くのも良いと思います。ただ寿命が短い場所もある為事前に調べてみて下さい。</td>
+          <td>　ユーザー登録後まずは色々なユーザーのFavospotを見て下さい。なぜこの人はここが好きなのか少し立ち止まって考えてみると楽しいかもしれません。いいねやコメントもしてみて下さい。また、あなたのFavospotも教えて下さい。あなたのお気に入りの場所はきっと誰かのお気に入りの場所になるはずです。こんな場所があるんだと思ったら現地に赴くのも良いと思います。ただ寿命が短い場所もある為事前に調べてみて下さい。</td>
         </tr>
 
         <tr>
