--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,7 @@
       </div>
     </section>
 
+  <div class="container">
     <div class="col-12">
       <div class="col">
         <div class="row">
@@ -27,7 +28,7 @@
                   <%= link_to post_path(post) do %>
                     <% post.post_images.each do |img| %>
                       <div class="float-left" , style="padding: 10px;">
-                        <%= attachment_image_tag img, :post_image, fallback: "noimage.png", size: '150x80' %></div>
+                        <%= attachment_image_tag img, :post_image, fallback: "noimage.png", size: '100x60' %></div>
                           <% i = i+1 %>
                     <% end %>
                   <% end %>
@@ -101,7 +102,7 @@
                   <%= link_to post_path(post) do %>
                     <% post.post_images.each do |img| %>
                       <div class="float-left" , style="padding: 10px;">
-                        <%= attachment_image_tag img, :post_image, fallback: "noimage.png", size: '200x120' %></div>
+                        <%= attachment_image_tag img, :post_image, fallback: "noimage.png", size: '180x100' %></div>
                     <% end %>
                   <% end %>
                 </div>
@@ -112,6 +113,7 @@
       </div>
     </div>
     <br>
+  </div>
 
 
   </div>
