--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,6 @@
     <section class="section">
       <div class="container">
         <div class="col-12">
-          <div class="col">
             <div class="row">
         	     <% @users.each do |user| %>
         		    <div class="card">
@@ -41,5 +40,10 @@
         </div>
       </div>
     </section>
+    <div class="row">
+          <%= render 'posts/sidebar', user: @user, post: @post %>
+    </div>
   </div>
 </div>
+
+
